# deployment_practice

./: Dockerfile_ai  Habitat ML Engineer Challenge.docx  README.md  pyproject.toml
src/deployment_practice/: __main__.py  carbon_ai.py  data_pull.py  database_tools.py
tests/: test_carbon_ai.py  test_data_pull.py
