[tool.poetry]
name = "deployment_practice"
version = "0.1.0"
description = ""
authors = ["Duncan Haywood"]
license = "MIT"
packages = [{include="deployment_practice", from='src'}]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.24.20"
scikit-learn = "^1.1.1"
mysql-connector = "^2.2.9"
joblib = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
